[package]
name = "prober_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
prober_core = { path = "../prober_core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
