[package]
name = "prober_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
discv5 = ["dep:discv5"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.86"
tracing = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "net"] }
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.31"
url = "2.5.7"
uuid = { version = "1.20.0", features = ["v4"] }
toml = "0.9.11"

discv5 = { version = "0.10.2", optional = true }

[dev-dependencies]
mockito = "1.7.1"
